--- a/src/static/css/bundle.dist.css
+++ b/src/static/css/bundle.dist.css
@@ -23002,6 +23002,29 @@ div#ssl_section_back {
   line-height: 2;
 }
 
+.mision-vision > h1 {
+  color: #000000;
+  font-size: 18pt;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+.mision-vision > h1:after {
+  content: "";
+  /* This is necessary for the pseudo element to work. */
+  display: block;
+  /* This will put the pseudo element on its own line. */
+  margin: 0 auto;
+  /* This will center the border. */
+  width: 21%;
+  /* Change this to whatever width you want. */
+  padding-top: 18px;
+  /* This creates some space between the element and the border. */
+  border-bottom: 3px solid #486600;
+  /* This creates the border. Replace black with whatever color you want. */
+}
+
 .post-list-back {
   display: flex;
   justify-content: center;
