--- a/src/apps/ecommerce/templates/ecommerce/home.html
+++ b/src/apps/ecommerce/templates/ecommerce/home.html
@@ -5,6 +5,12 @@
 {% load mathfilters %}
 {% block content %}
 
+<style>
+    .label{
+        font-size: 13pt;
+    }
+</style>
+
 <!-- slider section -->
 <div id="slider_back">
     <section class="slider">
@@ -50,7 +56,7 @@
 </div>
 <!-- end of slider section -->
 <!-- search section -->
-<div id="search_section_back">
+<!-- <div id="search_section_back">
     <section class="search-section">
         <h4 class="search-section__title">¿Qué estás buscando?</h4>
         <form class="search-section__form" action="">
@@ -72,10 +78,10 @@
             <button class="btn btn-success" type="submit">Buscar</button>
         </form>
     </section>
-</div>
+</div> -->
 <!-- end of search section -->
 <!-- video section -->
-<div id="video_section_back">
+<!-- <div id="video_section_back">
     <section class="video-section">
         <section class="business-features">
             <article class="business-features__item business-features__item__green">
@@ -118,59 +124,196 @@
             </div>
         </section>
     </section>
-</div>
+</div> -->
 <!-- end of video section -->
-<!-- month offers section -->
-<div id="month_offers_back">
-    <div class="month-offers">
-        <h2 class="month-offers__title">Ofertas del mes</h2>
-        <div class="glide glide-products products-slider-container">
-            <div class="glide__track" data-glide-el="track">
-                <ul class="glide__slides">
 
-                    {% for offer in offers %}
-                    <li class="glide__slide month-offers__item">
-                        <img class="month-offers__item__image" src="{{ offer.image.url }}" alt="">
-                        <h5 class="month-offers__item__title">{{offer.title}}</h5>
-                        <div class="month-offers__item__prices">
-                            <span
-                                class="month-offers__item__price--before month-offers__item__price">${{ offer.price }}</span>
-                            <span
-                                class="month-offers__item__price--after month-offers__item__price">${{ offer.price|sub:offer.discount }}</span>
+<!-- map -->
+<div class="container-fluid" align="center" style="margin-bottom: -3%;">
+    <img src="{% static 'img/map.png' %}">
+</div>
+<!-- end map -->
+
+<!-- formulario index -->
+<div id="" align="center" style="margin-bottom: 6%;">
+    <div class="" style="
+        background-color: #e9e9e9;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-top: 3%;
+        padding-bottom: 3%;
+        border-top: 4px solid #000000;
+        position: relative;
+        ">
+        <form class="contact-section-form" action="{% url "ecommerce:contact" %}" method="POST">
+            {% csrf_token %}
+            <!-- <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="name">Nombre:</label>
+                        <input type="text" class="form-control" name="name" id="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" class="form-control" name="email" id="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="subject">Asunto:</label>
+                        <input name="subject" class="form-control" id="subject"></input>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="message">Mensaje:</label>
+                        <textarea name="message" class="form-control" id="message" rows="8"></textarea>
+                    </div>
+                </div>
+            </div>
+            <div align="center">
+                <button type="submit" class="btn"
+                style="
+                    background-color: #223300;
+                    border-radius: 36px;
+                    padding-left: 2%;
+                    padding-right: 2%;
+                    ">Enviar</button>
+            </div> -->
+            <div class="row" style="text-align: center; text-align-last: center;">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="tipo_propiedad" class="label">TIPO DE PROPIEDAD</label>
+                        <select class="form-control">
+                            <option value="">Tipo de Propiedad</option>
+                            <option value="">Opcion 1</option>
+                            <option value="">Opcion 2</option>
+                            <option value="">Opcion 3</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="ciudad" class="label">CIUDAD</label>
+                        <select class="form-control">
+                            <option value="">Ciudad</option>
+                            <option value="">Opcion 1</option>
+                            <option value="">Opcion 2</option>
+                            <option value="">Opcion 3</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="habitaciones" class="label">HABITACIONES</label>
+                        <select class="form-control">
+                            <option value="">Habitaciones</option>
+                            <option value="">Opcion 1</option>
+                            <option value="">Opcion 2</option>
+                            <option value="">Opcion 3</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="tipo_oferta" class="label">TIPO DE OFERTA</label>
+                        <select class="form-control">
+                            <option value="">Tipo de Oferta</option>
+                            <option value="">Opcion 1</option>
+                            <option value="">Opcion 2</option>
+                            <option value="">Opcion 3</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="estado" class="label">ESTADO</label>
+                        <select class="form-control">
+                            <option value="">Estado</option>
+                            <option value="">Opcion 1</option>
+                            <option value="">Opcion 2</option>
+                            <option value="">Opcion 3</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="tamano" class="label">TAMAÑO</label>
+                        <select class="form-control">
+                            <option value="">Tamaño</option>
+                            <option value="">Opcion 1</option>
+                            <option value="">Opcion 2</option>
+                            <option value="">Opcion 3</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="row form-group">
+                        <div class="col-md-12" style="text-align: center;">
+                            <label for="precio" class="label">PRECIO</label>
                         </div>
-                        <button class="btn text-xs bg-gray-600"><svg class="top-header-actions__icon"
-                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-                            </svg></button>
-                        <button class="btn btn-success text-xs my-1">Comprar</button>
-                    </li>
-
-                    {% empty %}
-                        <h2>No hay ofertas por el momento</h2>
-                    {% endfor %}
-                </ul>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <input type="number" placeholder="Desde" class="form-control" name="precio-desde" id="precio-desde">
+                            </div>
+                            <div class="col-md-6">
+                                <input type="number" placeholder="Hasta" class="form-control" name="precio-hasta" id="precio-hasta">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="numero_banos" class="label">BAÑOS</label>
+                        <select class="form-control">
+                            <option value="">Número de Baños</option>
+                            <option value="">Opcion 1</option>
+                            <option value="">Opcion 2</option>
+                            <option value="">Opcion 3</option>
+                        </select>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <button type="reset" class="btn btn-block"
+                        style="
+                            color: #486600;
+                            border-color: #486600;
+                            border-radius: 36px;
+                            padding-left: 2%;
+                            padding-right: 2%;
+                            ">LIMPIAR</button>
+                        </div>
+                        <div class="col-md-6">
+                            <button type="submit" class="btn btn-block"
+                        style="
+                            background-color: #486600;
+                            border-radius: 36px;
+                            padding-left: 2%;
+                            padding-right: 2%;
+                            ">BUSCAR</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- <div class="glide__bullets" data-glide-el="controls[nav]">
-                    <button class="glide__bullet" data-glide-dir="=0"></button>
-                    <button class="glide__bullet" data-glide-dir="=1"></button>
-                    <button class="glide__bullet" data-glide-dir="=2"></button>
-                </div> -->
-            <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left month-offers__arrow month-offers__arrow--left"
-                    data-glide-dir="<">
-                    <</button> <button
-                        class="glide__arrow glide__arrow--right month-offers__arrow month-offers__arrow--right"
-                        data-glide-dir=">">>
-                </button>
-            </div>
-        </div>
+        </form>
     </div>
 </div>
-<!-- end of month offers section -->
+<!-- end formulario index -->
+
+<!-- logo-texto -->
+<div align="center">
+    <div class="container row">
+        <div class="col-md-4">
+            <img src="{% static 'img/logo-negro.png' %}">
+        </div>
+        <div class="col-md-8" style="padding-left: 5%;">
+            <p style="text-align: justify;">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet risus nec elit lacinia accumsan ultricies id dolor. Nam pulvinar ante massa, a efficitur risus elementum at. Proin egestas facilisis efficitur. Suspendisse nisl nibh, convallis id facilisis vel, placerat ac urna. Nulla eu leo lectus. Praesent consequat augue purus, ac congue justo fringilla ut. Sed sed velit diam. Donec nisi metus, placerat nec dolor accumsan, rutrum fermentum lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+        </div>
+    </div>
+    <div align="center" style="margin-top: 1%;">
+        <button type="submit" class="btn"
+            style="
+                background-color: #486600;
+                border-radius: 36px;
+                padding-left: 2%;
+                padding-right: 2%;
+                ">CONOCE MÁS</button>
+    </div>
+</div>
+<!-- end logo-texto -->
+
 <!-- suggestions section -->
-<div id="suggestions_back">
+<!-- <div id="suggestions_back">
     <div class="suggestions">
         <h3 class="suggestions__title">¿Que refacción estás buscando?</h3>
         <div class="suggestions-icons">
@@ -225,10 +368,10 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- end of suggestions section -->
 <!-- featured products section -->
-<div id="month_offers_back">
+<!-- <div id="month_offers_back">
     <div class="month-offers">
         <h2 class="month-offers__title">Productos</h2>
         <div class="glide glide-featured-products products-slider-container">
@@ -276,7 +419,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- end of featured products section -->
 <!-- ssl section -->
 <div id="ssl_section_back">
