--- a/src/apps/ecommerce/templates/ecommerce/orders.html
+++ b/src/apps/ecommerce/templates/ecommerce/orders.html
@@ -17,6 +17,8 @@
                     href="{% url "ecommerce:about" %}">Nosotros</a></li>
             <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/productos" %}active {% endif %}"
                     href="{% url "ecommerce:products" %}">Productos</a></li>
+            <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/agentes" %}active {% endif %}"
+                    href="{% url "ecommerce:agents" %}">Agentes</a></li>
             <li class="main-nav__item"><a class="{% if request.path|slice:"5" == "/blog" %}active {% endif %}"
                     href="{% url "ecommerce:posts_list" %}">Blog</a></li>
             <li class="main-nav__item"><a class="{% if request.path|slice:"9" == "/contacto" %}active {% endif %}"
