--- a/src/apps/ecommerce/templates/ecommerce/layouts/ecommerce.layout.html
+++ b/src/apps/ecommerce/templates/ecommerce/layouts/ecommerce.layout.html
@@ -35,7 +35,41 @@
     <!-- top header section -->
     <div id="top_header_back">
         <section id="top_header">
-            <div class="user-actions">
+
+            <div class="container">
+                <div class="row" style="display: flex; align-items: center;">
+                    <div class="col-md-2">
+                        <p><i class="fas fa-phone-volume"></i> (662)1 23 4567</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p><i class="fas fa-map-marker-alt"></i> Lorem Ipsum #12 Col. Ipsum</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p><i class="far fa-envelope"></i> contacto@caterra.com.mx</p>
+                    </div>
+                    <div class="col-md-2">
+                        <p>
+                            <a href=""><i class="fab fa-facebook-f"></i></a>&nbsp;&nbsp;
+                            <a href=""><i class="fab fa-twitter"></i></a>&nbsp;&nbsp;
+                            <a href=""><i class="fab fa-instagram"></i></a>
+                        </p>
+                    </div>
+                    <div class="col-md-2">
+                        <div align="right">
+                            <button type="submit" class="btn"
+                                    style="
+                                        color: #ffffff;
+                                        border-color: #ffffff;
+                                        border-radius: 36px;
+                                        padding-left: 8%;
+                                        padding-right: 8%;
+                                        ">INICIAR SESIÓN</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="user-actions">
 
                     {% if request.user.is_authenticated %}
                     <span class="user-actions__link" href="">
@@ -89,7 +123,7 @@
                         </ul>
                     </div>
 
-            </div>
+            </div> -->
         </section>
     </div>
     <!-- end of top header section -->
