--- a/src/apps/ecommerce/static/ecommerce/css/home.scss
+++ b/src/apps/ecommerce/static/ecommerce/css/home.scss
@@ -630,3 +630,25 @@ div#ssl_section_back {
 .slick-slider {
     max-width: 1920px;
 }
+
+// --------------------------------------------------------------------------------------------------------------------
+
+.agentes{
+    
+    >h1 {
+        color: #486600;
+        font-size: 24pt;
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: 1%;
+    }
+
+    >h1:after{
+        content: ""; /* This is necessary for the pseudo element to work. */ 
+        display: block; /* This will put the pseudo element on its own line. */
+        margin: 0 auto; /* This will center the border. */
+        width: 6%; /* Change this to whatever width you want. */
+        padding-top: 18px; /* This creates some space between the element and the border. */
+        border-bottom: 3px solid #486600; /* This creates the border. Replace black with whatever color you want. */
+    }
+}
