--- a/src/apps/ecommerce/templates/ecommerce/agents.html
+++ b/src/apps/ecommerce/templates/ecommerce/agents.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 {% block content %}
+
+
 <div id="header_section_back">
      <nav class="main-nav">
          <div class="main-nav__logo">
@@ -31,6 +33,18 @@
 
 
 </div>
+
+<!-- <style type="text/css">
+    @font-face {
+        font-family: "My Custom Font";
+        src: url({'static_root/fonts/LibreBaskerville-Bold.tff'}) format("truetype");
+    }
+    p.customfont { 
+        font-family: "My Custom Font", Verdana, Tahoma;
+    }
+</style> 
+<p class="customfont">Hello world!</p> -->
+
 
 <div class="container" style="margin-top: 5%; margin-bottom: 5%;">
     <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
