--- a/src/apps/ecommerce/templates/ecommerce/home.html
+++ b/src/apps/ecommerce/templates/ecommerce/home.html
@@ -131,7 +131,7 @@
 
 <!-- map -->
 <div class="container-fluid" align="center" style="margin-bottom: -3%;">
-    <img src="{% static 'img/map.png' %}">
+    <img src="{% static 'ecommerce/img/mapa.png' %}">
 </div>
 <!-- end map -->
 
@@ -299,6 +299,7 @@
         <div class="col-md-8" style="padding-left: 5%;">
             <p style="text-align: justify;">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet risus nec elit lacinia accumsan ultricies id dolor. Nam pulvinar ante massa, a efficitur risus elementum at. Proin egestas facilisis efficitur. Suspendisse nisl nibh, convallis id facilisis vel, placerat ac urna. Nulla eu leo lectus. Praesent consequat augue purus, ac congue justo fringilla ut. Sed sed velit diam. Donec nisi metus, placerat nec dolor accumsan, rutrum fermentum lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet risus nec elit lacinia accumsan ultricies id dolor. Nam pulvinar ante massa, a efficitur risus elementum at. Proin egestas facilisis efficitur. Suspendisse nisl nibh, convallis id facilisis vel, placerat ac urna. Nulla eu leo lectus. Praesent consequat augue purus, ac congue justo fringilla ut. Sed sed velit diam. Donec nisi metus, placerat nec dolor accumsan, rutrum fermentum lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
         </div>
     </div>
@@ -309,7 +310,7 @@
                 border-radius: 36px;
                 padding-left: 2%;
                 padding-right: 2%;
-                ">CONOCE MÁS</button>
+                ">VER MÁS</button>
     </div>
 </div>
 <!-- end logo-texto -->
@@ -423,15 +424,95 @@
     </div>
 </div> -->
 <!-- end of featured products section -->
+
+
+<div class="agentes" style="background: url('static/ecommerce/img/patron-agentes.png'); background-size: cover;">
+    <h1>CONOCE A NUESTROS AGENTES</h1>
+    <div class="container">
+    </div>
+
+    <div class="container" style="margin-top: 5%; margin-bottom: 5%;">
+        <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
+            <div class="col-md-4">
+                <img class="img-responsive" src="{% static 'ecommerce/img/img-agente.png' %}">
+                <h1 style="font-size: 20pt;">Bernardo</h1>
+                <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit et massa aliquam faucibus et non urna. Praesent ac justo vitae tellus placerat pellentesque.</p>
+                <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    agente@caterra.com.mx</p>
+                <div align="right" style="margin-top: 3%;">
+                    <button type="reset" class="btn"
+                            style="
+                                color: #486600;
+                                border-color: #486600;
+                                border-radius: 36px;
+                                padding-left: 8%;
+                                padding-right: 8%;
+                                ">VER PERFIL</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <img class="img-responsive" src="{% static 'ecommerce/img/img-agente.png' %}">
+                <h1 style="font-size: 20pt;">Bernardo</h1>
+                <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit et massa aliquam faucibus et non urna. Praesent ac justo vitae tellus placerat pellentesque.</p>
+                <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    agente@caterra.com.mx</p>
+                <div align="right" style="margin-top: 3%;">
+                    <button type="reset" class="btn"
+                            style="
+                                color: #486600;
+                                border-color: #486600;
+                                border-radius: 36px;
+                                padding-left: 8%;
+                                padding-right: 8%;
+                                ">VER PERFIL</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <img class="img-responsive" src="{% static 'ecommerce/img/img-agente.png' %}">
+                <h1 style="font-size: 20pt;">Bernardo</h1>
+                <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit et massa aliquam faucibus et non urna. Praesent ac justo vitae tellus placerat pellentesque.</p>
+                <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    agente@caterra.com.mx</p>
+                <div align="right" style="margin-top: 3%;">
+                    <button type="reset" class="btn"
+                            style="
+                                color: #486600;
+                                border-color: #486600;
+                                border-radius: 36px;
+                                padding-left: 8%;
+                                padding-right: 8%;
+                                ">VER PERFIL</button>
+                </div>
+            </div>
+        </div>
+
+        <div align="center" style="margin-top: 1%;">
+            <button type="submit" class="btn"
+                style="
+                    background-color: #486600;
+                    border-radius: 65px;
+                    padding-left: 5%;
+                    padding-right: 5%;
+                    font-weight: lighter;
+                    font-size: 24pt;
+                    "> 
+                    CONOCE A NUESTROS AGENTES<br>
+                    <span style="font-weight: bold;">AQUÍ</span>    
+                </button>
+        </div>
+
+    </div>
+</div>
+
+
+
+
 <!-- ssl section -->
-<div id="ssl_section_back">
+<!-- <div id="ssl_section_back">
     <section class="ssl-section">
         <img class="ssl-belt" src="{% static 'backoffice/img/ssl-toolbelt.svg' %}" alt="">
     </section>
-</div>
+</div> -->
 <!-- end of ssl section -->
 <!-- brands section -->
-<div id="brands_section_back">
+<!-- <div id="brands_section_back">
     <section class="brands-section">
         <ul>
             <li class="brand-section__item"><img src="{% static 'backoffice/img/marca1.png' %}" alt=""></li>
@@ -440,7 +521,7 @@
             <li class="brand-section__item"><img src="{% static 'backoffice/img/marca4.png' %}" alt=""></li>
         </ul>
     </section>
-</div>
+</div> -->
 <!-- end of brands section -->
 
 {% endblock content %}
