--- a/src/apps/users/templates/users/login.html
+++ b/src/apps/users/templates/users/login.html
@@ -15,7 +15,7 @@
     <div id="login_back">
         <form action="{% url 'users:login_view' %}" method="POST" class="login-form">
             {% csrf_token %}
-            <img class="login-form__logo" src=" {% static 'img/logo-color.png' %}" alt="Caterra">
+            <img class="login-form__logo" src=" {% static 'img/logo-negro.png' %}" alt="Caterra">
 
             {% if form.errors %}
             {% for key,value in form.errors.items %}
