--- a/src/static/css/bundle.dist.css
+++ b/src/static/css/bundle.dist.css
@@ -21870,6 +21870,7 @@ input:focus,
   font-size: 0.875rem;
   display: block;
   margin: 0 auto;
+  background-color: #486600;
 }
 
 .login-form__alert {
@@ -22162,6 +22163,7 @@ input:focus,
   padding: 10px;
   max-width: 1440px;
   width: 100%;
+  font-weight: 100;
 }
 
 .user-actions__link {
@@ -22960,6 +22962,29 @@ div#ssl_section_back {
 
 .slick-slider {
   max-width: 1920px;
+}
+
+.agentes > h1 {
+  color: #486600;
+  font-size: 24pt;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 1%;
+}
+
+.agentes > h1:after {
+  content: "";
+  /* This is necessary for the pseudo element to work. */
+  display: block;
+  /* This will put the pseudo element on its own line. */
+  margin: 0 auto;
+  /* This will center the border. */
+  width: 6%;
+  /* Change this to whatever width you want. */
+  padding-top: 18px;
+  /* This creates some space between the element and the border. */
+  border-bottom: 3px solid #486600;
+  /* This creates the border. Replace black with whatever color you want. */
 }
 
 #about_use_section_back {
