--- a/src/apps/ecommerce/templates/ecommerce/properties.html
+++ b/src/apps/ecommerce/templates/ecommerce/properties.html
@@ -3,29 +3,37 @@
 {% load static %}
 {% block content %}
 
+<style>
+
+</style>
+
+
+
 
 <div id="header_section_back">
-     <nav class="main-nav">
-         <div class="main-nav__logo">
-             <a href="{% url "ecommerce:home" %}">
-                 <img src="{% static 'img/logo-negro.png' %}" class="img-responsive" style="width: 30%;" alt="CaterraLogo">
-             </a>
-         </div>
-         <ul class="main-nav__menu">
-             <li class="main-nav__item "><a class="{% if request.path == "/" %}active {% endif %}"
-                     href="{% url "ecommerce:home" %}">Inicio</a></li>
-             <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/acerca-de" %}active {% endif %}"
-                     href="{% url "ecommerce:about" %}">Nosotros</a></li>
-            <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/productos" %}active {% endif %}"
-                    href="{% url "ecommerce:products" %}">Productos</a></li>
+    <nav class="main-nav">
+        <div class="main-nav__logo">
+            <a href="{% url "ecommerce:home" %}">
+                <img src="{% static 'img/logo-negro.png' %}" class="img-responsive" style="width: 30%;" alt="CaterraLogo">
+            </a>
+        </div>
+        <ul class="main-nav__menu">
+            <li class="main-nav__item "><a class="{% if request.path == "/" %}active {% endif %}"
+                    href="{% url "ecommerce:home" %}">Inicio</a></li>
+            <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/acerca-de" %}active {% endif %}"
+                    href="{% url "ecommerce:about" %}">Nosotros</a></li>
+            <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/propiedades" %}active {% endif %}"
+                    href="{% url "ecommerce:properties" %}">Propiedades</a></li>
+            <!-- <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/productos" %}active {% endif %}"
+                    href="{% url "ecommerce:products" %}">Productos</a></li> -->
             <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/agentes" %}active {% endif %}"
                     href="{% url "ecommerce:agents" %}">Agentes</a></li>
-             <li class="main-nav__item"><a class="{% if request.path|slice:"5" == "/blog" %}active {% endif %}"
-                     href="{% url "ecommerce:posts_list" %}">Blog</a></li>
-             <li class="main-nav__item"><a class="{% if request.path|slice:"9" == "/contacto" %}active {% endif %}"
-                     href="{% url "ecommerce:contact" %}">Contacto</a></li>
-         </ul>
-     </nav>
+            <li class="main-nav__item"><a class="{% if request.path|slice:"5" == "/blog" %}active {% endif %}"
+                    href="{% url "ecommerce:posts_list" %}">Blog</a></li>
+            <li class="main-nav__item"><a class="{% if request.path|slice:"9" == "/contacto" %}active {% endif %}"
+                    href="{% url "ecommerce:contact" %}">Contacto</a></li>
+        </ul>
+    </nav>
 
     <div class="container text-center" style="padding-top: 15%;">
         <h1 style="color: #ffffff; font-size: 46px;">PROPIEDADES</h1>
@@ -45,6 +53,32 @@
 </style> 
 <p class="customfont">Hello world!</p> -->
 
+
+<!-- SIDEBAR -->
+
+<!-- Section: Price -->
+<!-- <section class="mb-4">
+
+    <h6 class="font-weight-bold mb-3">Price</h6>
+
+    <form>
+        <div class="d-flex align-items-center mt-4 pb-1">
+            <div class="md-form md-outline my-0">
+                <input id="from" type="text" class="form-control mb-0">
+                <label for="form">$ Min</label>
+            </div>
+            <p class="px-2 mb-0 text-muted"> - </p>
+            <div class="md-form md-outline my-0">
+                <input id="to" type="text" class="form-control mb-0">
+                <label for="to">$ Max</label>
+            </div>
+        </div>
+    </form>
+
+</section> -->
+<!-- Section: Price -->
+
+<!-- end SIDEBAR -->
 
 <div class="container" style="margin-top: 5%; margin-bottom: 5%;">
     <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
