Genesis/cambios en front

--- a/src/static/templates/backoffice/users/list.html
+++ b/src/static/templates/backoffice/users/list.html
@@ -65,7 +65,7 @@
 {% block footer_actions %}
 <div id="footer_actions">
     <ul class="footer-actions">
-    <li class="footer-actions__item"><a href="{% url 'backoffice:users_create' %}"><img class="footer-actions__icon"src="{% static 'backoffice/img/ic-add.png' %}" alt="">Nuevo usuario</a></li>
+    <li class="footer-actions__item"><a href="{% url 'backoffice:users_create' %}"><img class="footer-actions__icon"src="{% static 'img/backoffice/ic-add.png' %}" alt="">Nuevo usuario</a></li>
     </ul>
 </div>
 {% endblock footer_actions %}
