--- a/src/static/templates/ecommerce/about-us.html
+++ b/src/static/templates/ecommerce/about-us.html
@@ -2,37 +2,8 @@
 
 {% load static %}
 {% block content %}
-<div id="header_section_back">
-    <nav class="main-nav">
-        <div class="main-nav__logo">
-            <a href="{% url "ecommerce:home" %}">
-                <img src="{% static 'img/logo-negro.png' %}" class="img-responsive" style="width: 30%;" alt="CaterraLogo">
-            </a>
-        </div>
-        <ul class="main-nav__menu">
-            <li class="main-nav__item "><a class="{% if request.path == "/" %}active {% endif %}"
-                    href="{% url "ecommerce:home" %}">Inicio</a></li>
-            <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/acerca-de" %}active {% endif %}"
-                    href="{% url "ecommerce:about" %}">Nosotros</a></li>
-            <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/propiedades" %}active {% endif %}"
-                    href="{% url "ecommerce:properties" %}">Propiedades</a></li>
-            <!-- <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/productos" %}active {% endif %}"
-                    href="{% url "ecommerce:products" %}">Productos</a></li> -->
-            <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/agentes" %}active {% endif %}"
-                    href="{% url "ecommerce:agents" %}">Agentes</a></li>
-            <li class="main-nav__item"><a class="{% if request.path|slice:"5" == "/blog" %}active {% endif %}"
-                    href="{% url "ecommerce:posts_list" %}">Blog</a></li>
-            <li class="main-nav__item"><a class="{% if request.path|slice:"9" == "/contacto" %}active {% endif %}"
-                    href="{% url "ecommerce:contact" %}">Contacto</a></li>
-        </ul>
-    </nav>
+{% include './includes/header.html' with seccion="NOSOTROS" %}
 
-    <div class="container text-center" style="padding-top: 15%;">
-        <h1 style="color: #ffffff; font-size: 46px;">NOSOTROS</h1>
-    </div>
-
-
-</div>
 <div id="about_use_section_back" style="margin-top: 4%; margin-bottom: 4%;">
     <div>
 
