--- a/src/static/templates/ecommerce/home.html
+++ b/src/static/templates/ecommerce/home.html
@@ -1,15 +1,14 @@
 {% extends 'ecommerce/layouts/ecommerce.layout.html' %}
-
-
 {% load static %}
 {% load mathfilters %}
-{% block content %}
 
-<style>
-    .label{
-        font-size: 13pt;
-    }
-</style>
+
+{% block estilos-adicionales %}
+<link rel="stylesheet" href="{% static 'css/ecommerce/home.css' %}">
+{% endblock estilos-adicionales %}
+
+
+{% block content %}
 
 <!-- slider section -->
 <div id="slider_back">
@@ -26,35 +25,9 @@
                     </li>
                     {% endfor %}
 
-
                 </ul>
 
-            <nav class="main-nav">
-                <div class="main-nav__logo">
-                    <a href="{% url "ecommerce:home" %}">
-                        <img src="{% static 'img/logo-negro.png' %}" class="img-responsive" style="width: 30%;" alt="CaterraLogo">
-                    </a>
-                </div>
-                <ul class="main-nav__menu">
-                    <li class="main-nav__item "><a class="{% if request.path == "/" %}active {% endif %}"
-                            href="{% url "ecommerce:home" %}">Inicio</a></li>
-                    <li class="main-nav__item"><a
-                            class="{% if request.path|slice:"10" == "/acerca-de" %}active {% endif %}"
-                            href="{% url "ecommerce:about" %}">Nosotros</a></li>
-                    <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/propiedades" %}active {% endif %}"
-                            href="{% url "ecommerce:properties" %}">Propiedades</a></li>
-                    <!-- <li class="main-nav__item"><a
-                            class="{% if request.path|slice:"10" == "/productos" %}active {% endif %}"
-                            href="{% url "ecommerce:products" %}">Productos</a></li> -->
-                    <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/agentes" %}active {% endif %}"
-                            href="{% url "ecommerce:agents" %}">Agentes</a></li>
-                    <li class="main-nav__item"><a class="{% if request.path|slice:"5" == "/blog" %}active {% endif %}"
-                            href="{% url "ecommerce:posts_list" %}">Blog</a></li>
-                    <li class="main-nav__item"><a
-                            class="{% if request.path|slice:"9" == "/contacto" %}active {% endif %}"
-                            href="{% url "ecommerce:contact" %}">Contacto</a></li>
-                </ul>
-            </nav>
+            {% include './includes/nav.html' %}
 
     </section>
 </div>
@@ -321,8 +294,10 @@
 
 <div class="container agentes" style="margin-top: 5%; margin-bottom: 5%;">
     <h1>PROPIEDADES</h1>
-    <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
-        <div class="col-md-4">
+    <div class="row">
+        
+        {% for i in 'queque' %}
+        <div class="col-md-4 property-card">
             <img class="img-responsive" src="{% static 'ecommerce/img/img-propiedad.png' %}">
             <div style="background-color: #f1f1f1; padding: 3%;">
                 <h1 style="font-size: 20pt;">Monsectetur Propiedad Ejemplo</h1>
@@ -337,156 +312,13 @@
                         <p><i class="far fa-clone"></i> Comparar</p>
                     </div>
                     <div class="col-md-4">
-                        <button type="reset" class="btn"
-                            style="
-                                color: #486600;
-                                border-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 8%;
-                                padding-right: 8%;
-                                ">DETALLES</button>
+                        <a href="" class="btn clear-button">DETALLES</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <img class="img-responsive" src="{% static 'ecommerce/img/img-propiedad.png' %}">
-            <div style="background-color: #f1f1f1; padding: 3%;">
-                <h1 style="font-size: 20pt;">Monsectetur Propiedad Ejemplo</h1>
-                <p style="text-align: justify;">122 Lorem ipsum dolor sit amet.</p>
-                <p style="color: #486600">$1,300,000</p>
-                <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i class="fas fa-bath"></i>&nbsp;2&nbsp;&nbsp;&nbsp;<i class="fas fa-th-large"></i> 103 m2</p>
-                <div class="row">
-                    <div class="col-md-4">
-                        <p>Hace 3 Meses</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="far fa-clone"></i> Comparar</p>
-                    </div>
-                    <div class="col-md-4">
-                        <button type="reset" class="btn"
-                            style="
-                                color: #486600;
-                                border-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 8%;
-                                padding-right: 8%;
-                                ">DETALLES</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <img class="img-responsive" src="{% static 'ecommerce/img/img-propiedad.png' %}">
-            <div style="background-color: #f1f1f1; padding: 3%;">
-                <h1 style="font-size: 20pt;">Monsectetur Propiedad Ejemplo</h1>
-                <p style="text-align: justify;">122 Lorem ipsum dolor sit amet.</p>
-                <p style="color: #486600">$1,300,000</p>
-                <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i class="fas fa-bath"></i>&nbsp;2&nbsp;&nbsp;&nbsp;<i class="fas fa-th-large"></i> 103 m2</p>
-                <div class="row">
-                    <div class="col-md-4">
-                        <p>Hace 3 Meses</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="far fa-clone"></i> Comparar</p>
-                    </div>
-                    <div class="col-md-4">
-                        <button type="reset" class="btn"
-                            style="
-                                color: #486600;
-                                border-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 8%;
-                                padding-right: 8%;
-                                ">DETALLES</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
-        <div class="col-md-4">
-            <img class="img-responsive" src="{% static 'ecommerce/img/img-propiedad.png' %}">
-            <div style="background-color: #f1f1f1; padding: 3%;">
-                <h1 style="font-size: 20pt;">Monsectetur Propiedad Ejemplo</h1>
-                <p style="text-align: justify;">122 Lorem ipsum dolor sit amet.</p>
-                <p style="color: #486600">$1,300,000</p>
-                <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i class="fas fa-bath"></i>&nbsp;2&nbsp;&nbsp;&nbsp;<i class="fas fa-th-large"></i> 103 m2</p>
-                <div class="row">
-                    <div class="col-md-4">
-                        <p>Hace 3 Meses</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="far fa-clone"></i> Comparar</p>
-                    </div>
-                    <div class="col-md-4">
-                        <button type="reset" class="btn"
-                            style="
-                                color: #486600;
-                                border-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 8%;
-                                padding-right: 8%;
-                                ">DETALLES</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <img class="img-responsive" src="{% static 'ecommerce/img/img-propiedad.png' %}">
-            <div style="background-color: #f1f1f1; padding: 3%;">
-                <h1 style="font-size: 20pt;">Monsectetur Propiedad Ejemplo</h1>
-                <p style="text-align: justify;">122 Lorem ipsum dolor sit amet.</p>
-                <p style="color: #486600">$1,300,000</p>
-                <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i class="fas fa-bath"></i>&nbsp;2&nbsp;&nbsp;&nbsp;<i class="fas fa-th-large"></i> 103 m2</p>
-                <div class="row">
-                    <div class="col-md-4">
-                        <p>Hace 3 Meses</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="far fa-clone"></i> Comparar</p>
-                    </div>
-                    <div class="col-md-4">
-                        <button type="reset" class="btn"
-                            style="
-                                color: #486600;
-                                border-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 8%;
-                                padding-right: 8%;
-                                ">DETALLES</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <img class="img-responsive" src="{% static 'ecommerce/img/img-propiedad.png' %}">
-            <div style="background-color: #f1f1f1; padding: 3%;">
-                <h1 style="font-size: 20pt;">Monsectetur Propiedad Ejemplo</h1>
-                <p style="text-align: justify;">122 Lorem ipsum dolor sit amet.</p>
-                <p style="color: #486600">$1,300,000</p>
-                <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i class="fas fa-bath"></i>&nbsp;2&nbsp;&nbsp;&nbsp;<i class="fas fa-th-large"></i> 103 m2</p>
-                <div class="row">
-                    <div class="col-md-4">
-                        <p>Hace 3 Meses</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="far fa-clone"></i> Comparar</p>
-                    </div>
-                    <div class="col-md-4">
-                        <button type="reset" class="btn"
-                            style="
-                                color: #486600;
-                                border-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 8%;
-                                padding-right: 8%;
-                                ">DETALLES</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
+            
     </div>
 
 </div>
@@ -613,69 +445,23 @@
 
     <div class="container" style="margin-top: 5%; margin-bottom: 5%;">
         <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
-            <div class="col-md-4">
-                <img class="img-responsive" src="{% static 'ecommerce/img/img-agente.png' %}">
-                <h1 style="font-size: 20pt;">Bernardo</h1>
-                <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit et massa aliquam faucibus et non urna. Praesent ac justo vitae tellus placerat pellentesque.</p>
-                <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    agente@caterra.com.mx</p>
-                <div align="right" style="margin-top: 3%;">
-                    <button type="reset" class="btn"
-                            style="
-                                color: #486600;
-                                border-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 8%;
-                                padding-right: 8%;
-                                ">VER PERFIL</button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <img class="img-responsive" src="{% static 'ecommerce/img/img-agente.png' %}">
-                <h1 style="font-size: 20pt;">Bernardo</h1>
-                <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit et massa aliquam faucibus et non urna. Praesent ac justo vitae tellus placerat pellentesque.</p>
-                <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    agente@caterra.com.mx</p>
-                <div align="right" style="margin-top: 3%;">
-                    <button type="reset" class="btn"
-                            style="
-                                color: #486600;
-                                border-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 8%;
-                                padding-right: 8%;
-                                ">VER PERFIL</button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <img class="img-responsive" src="{% static 'ecommerce/img/img-agente.png' %}">
-                <h1 style="font-size: 20pt;">Bernardo</h1>
-                <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit et massa aliquam faucibus et non urna. Praesent ac justo vitae tellus placerat pellentesque.</p>
-                <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    agente@caterra.com.mx</p>
-                <div align="right" style="margin-top: 3%;">
-                    <button type="reset" class="btn"
-                            style="
-                                color: #486600;
-                                border-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 8%;
-                                padding-right: 8%;
-                                ">VER PERFIL</button>
-                </div>
-            </div>
+            
+            {% for i in 'que' %}
+                <div class="col-md-4">
+                    <img class="img-responsive" src="{% static 'ecommerce/img/img-agente.png' %}">
+                    <h1 style="font-size: 20pt;">Bernardo</h1>
+                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit et massa aliquam faucibus et non urna. Praesent ac justo vitae tellus placerat pellentesque.</p>
+                    <p><i class="far fa-envelope"></i>    agente@caterra.com.mx</p>
+                    <div align="right" style="margin: 3% 0;">
+                        <a href="" class="btn clear-button">VER PERFIL</a>
+                    </div>
+                </div>                
+            {% endfor %}
+                
         </div>
 
         <div align="center" style="margin-top: 1%;">
-            <button type="submit" class="btn"
-                style="
-                    background-color: #486600;
-                    border-radius: 65px;
-                    padding-left: 5%;
-                    padding-right: 5%;
-                    font-weight: lighter;
-                    font-size: 24pt;
-                    "> 
-                    CONOCE A NUESTROS AGENTES<br>
-                    <span style="font-weight: bold;">AQUÍ</span>    
-                </button>
+            <a href="{% url 'ecommerce:agents' %}" class="big-button">CONOCE A NUESTROS AGENTES <strong>AQUí</strong></a>
         </div>
 
     </div>
