--- a/src/static/templates/ecommerce/layouts/ecommerce.layout.html
+++ b/src/static/templates/ecommerce/layouts/ecommerce.layout.html
@@ -28,6 +28,12 @@
     <!-- Styles -->
     <link href="{% static 'css/bundle.dist.css' %}" rel="stylesheet">
 
+    <link rel="stylesheet" href="{% static 'css/ecommerce/base.css' %}">
+    {% block estilos-adicionales %}
+        
+    {% endblock estilos-adicionales %}
+        
+
 </head>
 
 <body>
@@ -39,7 +45,7 @@
             <div class="container">
                 <div class="row" style="display: flex; align-items: center;">
                     <div class="col-md-2">
-                        <p><i class="fas fa-phone-volume"></i> (662)1 23 4567</p>
+                        <p><i class="fas fa-phone-volume"></i> (662) 123 4567</p>
                     </div>
                     <div class="col-md-3">
                         <p><i class="fas fa-map-marker-alt"></i> Lorem Ipsum #12 Col. Ipsum</p>
@@ -155,7 +161,7 @@
             <div class="footer-contact-info">
                 <ul>
                     <li class="footer-contact-info__item"><a href=""><img src="{% static 'backoffice/img/ic-ph.png' %}"
-                                alt="">(662)1-123456</a></li>
+                                alt="">(662) 112 3456</a></li>
                     <li class="footer-contact-info__item"><a href=""><img src="{% static 'backoffice/img/ic-ms.png' %}"
                                 alt="">info@caterra.com</a></li>
                 </ul>
