--- a/src/static/templates/backoffice/propiedades/crear.html
+++ b/src/static/templates/backoffice/propiedades/crear.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="slider-form" action="{% url 'backoffice:offers_create' %}" method="POST" enctype="multipart/form-data">
+<form class="slider-form" action="{% url 'backoffice:propiedades_crear' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
 
     {% if form.errors %}
@@ -24,6 +24,7 @@
 
     <div class="form-group">
         <label for="title">{{form.title.label}}</label>
+        {{form.nombre}}
         <input type="text" name="title" id="title" required>
     </div>
     <div class="form-group">
@@ -53,7 +54,7 @@
 
     <div class="form-group__actions">
         <button class="btn btn-success" type="submit">Guardar</button>
-        <a class="btn btn-danger" href="{% url 'backoffice:offers' %}">Cancelar</a>
+        <a class="btn btn-danger" href="{% url 'backoffice:propiedades_crear' %}">Cancelar</a>
     </div>
 </form>
 
