--- a/src/static/templates/ecommerce/properties.html
+++ b/src/static/templates/ecommerce/properties.html
@@ -4,6 +4,11 @@
 {% block content %}
 
 
+{% block estilos-adicionales %}
+<link rel="stylesheet" href="{% static 'css/ecommerce/properties.css' %}">
+{% endblock estilos-adicionales %}
+    
+
 {% include './includes/header.html' with seccion="PROPIEDADES" %}
 
 
@@ -127,26 +132,35 @@
             <div class="main container" style="margin-top: 5%; margin-bottom: 5%;">
                 <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
                     
-                    {% for i in 'queque' %}
+                    {% for propiedad in object_list %}
                     <div class="col-md-6 property-card">
-                        <img class="img-responsive" src="{% static 'ecommerce/img/img-propiedad.png' %}">
-                        <div style="background-color: #f1f1f1; padding: 3%;">
-                            <h1 style="font-size: 20pt;">Monsectetur Propiedad Ejemplo</h1>
-                            <p style="text-align: justify;">122 Lorem ipsum dolor sit amet.</p>
-                            <p style="color: #486600">$1,300,000</p>
-                            <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i class="fas fa-bath"></i>&nbsp;2&nbsp;&nbsp;&nbsp;<i class="fas fa-th-large"></i> 103 m2</p>
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <p>Hace 3 Meses</p>
-                                </div>
-                                <div class="col-md-4">
-                                    <p><i class="far fa-clone"></i> Comparar</p>
-                                </div>
-                                <div class="col-md-4">
-                                    <a href="" class="btn clear-button">DETALLES</a>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <img class="img-responsive" src="{{propiedad.imagen.url}}">
+                            </div>
+                            <div class="col-lg-12">
+
+                                <div style="background-color: #f1f1f1; padding: 3%;">
+                                    <h1 style="font-size: 20pt;">{{propiedad.nombre}}</h1>
+                                    <p style="text-align: justify;">{{propiedad.direccion}}</p>
+                                    <p style="color: #486600">${{propiedad.precio}}</p>
+                                    <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i class="fas fa-bath"></i>&nbsp;{{propiedad.banos}}&nbsp;&nbsp;&nbsp;<i class="fas fa-th-large"></i> {{propiedad.terreno}} m2</p>
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <p>Hace 3 Meses</p>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <p><i class="far fa-clone"></i> Comparar</p>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <a href="" class="btn clear-button">DETALLES</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+
                         </div>
+                        
                     </div>
                         
                     {% endfor %}
