--- a/src/static/templates/backoffice/layouts/backoffice.layout.html
+++ b/src/static/templates/backoffice/layouts/backoffice.layout.html
@@ -19,10 +19,10 @@
         <div id="content_wrapper">
             <header id="main_header">
                 <div class="main-header__logo">
-                    <a href="/"><img src="{% static 'img/logo-color.png' %}" alt="Caterra Logo"></a>
+                    <a href=""><img src="{% static 'img/ic-13.png' %}" alt="Caterra Logo"></a>
                 </div>
                 <div class="main-header__user-menu">
-                    <a href="#"><img src="{% static 'img/backoffice/logo-sm-green.png' %}" alt="User avatar"></a>
+                    <a href="#"><img src="{% static 'img/ic-13.png' %}" alt="User avatar"></a>
                 </div>
             </header>
             <section id="subheader">
@@ -31,7 +31,7 @@
             <section id="sidemenu">
                 <section class="side-menu__user-info">
                     <div class="side-menu__logo">
-                        <img src="{% static 'img/backoffice/logo-sm-white.png' %}" alt="User avatar">
+                        <img src="{% static 'img/ic-13.png' %}" alt="User avatar">
                     </div>
                     <div class="side-menu__username">
                         <p>{{ user }}</p>
