--- a/src/static/templates/ecommerce/home.html
+++ b/src/static/templates/ecommerce/home.html
@@ -20,7 +20,7 @@
                         <img src="{{ slider.image.url }}" alt="">
                         <div class="main-slider__content">
                             <h2 class="main-slider__content__title">{{ slider.title}}</h2>
-                            <a href="{{ slider.url }}" class="main-slider__content__action btn btn-success text-xs">Ver mas</a>
+                            <a href="{{ slider.url }}" class="main-slider__content__action btn btn-success text-xs">Ver más</a>
                         </div>
                     </li>
                     {% endfor %}
